source/cd/cd.d


void cdfCanvasPutImageRectRGB(cdCanvas* canvas, int iw, int ih, const(ubyte)* r, const(ubyte)* g, const(ubyte)* b, double x, double y, double w, double h, int xmin, int xmax, int ymin, int ymax);
void cdfCanvasPutImageRectRGBA(cdCanvas* canvas, int iw, int ih, const(ubyte)* r, const(ubyte)* g, const(ubyte)* b, const(ubyte)* a, double x, double y, double w, double h, int xmin, int xmax, int ymin, int ymax);
void cdfCanvasPutImageRectMap(cdCanvas* canvas, int iw, int ih, const(ubyte)* index, const c_long* colors, double x, double y, double w, double h, int xmin, int xmax, int ymin, int ymax);

/* server images - deprecated (use double buffer drivers) */
deprecated("use double buffer drivers") {
	cdImage* cdCanvasCreateImage(cdCanvas* canvas, int w, int h);
	void cdKillImage(cdImage* image);
	void cdCanvasGetImage(cdCanvas* canvas, cdImage* image, int x, int y);
	void cdCanvasPutImageRect(cdCanvas* canvas, cdImage* image, int x, int y, int xmin, int xmax, int ymin, int ymax);
	void cdCanvasScrollArea(cdCanvas* canvas, int xmin, int xmax, int ymin, int ymax, int dx, int dy);
}

/* bitmap - deprecated (use imImage) */
deprecated("use imImage") {
	cdBitmap* cdCreateBitmap(int w, int h, int type);
	cdBitmap* cdInitBitmap(int w, int h, int type, ...);
	void cdKillBitmap(cdBitmap* bitmap);
	ubyte* cdBitmapGetData(cdBitmap* bitmap, int dataptr);
	void cdBitmapSetRect(cdBitmap* bitmap, int xmin, int xmax, int ymin, int ymax);
	void cdCanvasPutBitmap(cdCanvas* canvas, cdBitmap* bitmap, int x, int y, int w, int h);
	void cdCanvasGetBitmap(cdCanvas* canvas, cdBitmap* bitmap, int x, int y);
	void cdBitmapRGB2Map(cdBitmap* bitmap_rgb, cdBitmap* bitmap_map);
}

/* color */
c_long cdEncodeColor(ubyte red, ubyte green, ubyte blue);
c_long cdEncodeColorAlpha(ubyte red, ubyte green, ubyte blue, ubyte alpha);
c_long cdEncodeAlpha(c_long color, ubyte alpha);
void cdDecodeColor(c_long color, ubyte* red, ubyte* green, ubyte* blue);
void cdDecodeColorAlpha(c_long color, ubyte* red, ubyte* green, ubyte* blue, ubyte* alpha);
ubyte cdDecodeAlpha(c_long color);

ubyte cdAlpha(uint _)    { return cast(ubyte) ~((_ >> 24) & 0xFF); }
ubyte cdReserved(uint _) { return cast(ubyte)  ((_ >> 24) & 0xFF); }
ubyte cdRed(uint _)      { return cast(ubyte)  ((_ >> 16) & 0xFF); }
ubyte cdGreen(uint _)    { return cast(ubyte)  ((_ >>  8) & 0xFF); }
ubyte cdBlue(uint _)     { return cast(ubyte)  ((_ >>  0) & 0xFF); }

/* client image color conversion */
void cdRGB2Map(int width, int height, const(ubyte)* red, const(ubyte)* green, const(ubyte)* blue, ubyte* index, int pal_size, c_long* color);


/* CD Values */

enum CD_QUERY = -1;             /* query value */

enum {                        /* bitmap type */
 CD_RGB,                      /* these definitions are compatible with the IM library */
 CD_MAP,
 CD_RGBA = 0x100
}

enum {                         /* bitmap data */
 CD_IRED,
 CD_IGREEN,
 CD_IBLUE,
 CD_IALPHA,
 CD_INDEX,
 CD_COLORS
}

enum {                          /* status report */
 CD_ERROR = -1,
 CD_OK    =  0
}

enum {                          /* clip mode */
 CD_CLIPOFF,
 CD_CLIPAREA,
 CD_CLIPPOLYGON,
 CD_CLIPREGION
}

enum {                          /* region combine mode */
 CD_UNION,
 CD_INTERSECT,
 CD_DIFFERENCE,
 CD_NOTINTERSECT
}

enum {                          /* polygon mode (begin...end) */
 CD_FILL,
 CD_OPEN_LINES,
 CD_CLOSED_LINES,
 CD_CLIP,
 CD_BEZIER,
 CD_REGION,
 CD_PATH
}

enum CD_POLYCUSTOM = 10;

enum {                          /* path actions */
 CD_PATH_NEW,
 CD_PATH_MOVETO,
 CD_PATH_LINETO,
 CD_PATH_ARC,
 CD_PATH_CURVETO,
 CD_PATH_CLOSE,
 CD_PATH_FILL,
 CD_PATH_STROKE,
 CD_PATH_FILLSTROKE,
 CD_PATH_CLIP
}

enum {                          /* fill mode */
 CD_EVENODD,
 CD_WINDING
}

enum {                          /* line join  */
 CD_MITER,
 CD_BEVEL,
 CD_ROUND
}

enum {                          /* line cap  */
 CD_CAPFLAT,
 CD_CAPSQUARE,
 CD_CAPROUND
}

enum {                          /* background opacity mode */
 CD_OPAQUE,
 CD_TRANSPARENT
}

enum {                          /* write mode */
 CD_REPLACE,
 CD_XOR,
 CD_NOT_XOR
}

enum {                          /* color allocation mode (palette) */
 CD_POLITE,
 CD_FORCE
}

enum {                          /* line style */
 CD_CONTINUOUS,
 CD_DASHED,
 CD_DOTTED,
 CD_DASH_DOT,
 CD_DASH_DOT_DOT,
 CD_CUSTOM
}

enum {                          /* marker type */
 CD_PLUS,
 CD_STAR,
 CD_CIRCLE,
 CD_X,
 CD_BOX,
 CD_DIAMOND,
 CD_HOLLOW_CIRCLE,
 CD_HOLLOW_BOX,
 CD_HOLLOW_DIAMOND
}

enum {                          /* hatch type */
 CD_HORIZONTAL,
 CD_VERTICAL,
 CD_FDIAGONAL,
 CD_BDIAGONAL,
 CD_CROSS,
 CD_DIAGCROSS
}

enum {                          /* interior style */
 CD_SOLID,
 CD_HATCH,
 CD_STIPPLE,
 CD_PATTERN,
 CD_HOLLOW
}

enum {                          /* text alignment */
 CD_NORTH,
 CD_SOUTH,
 CD_EAST,
 CD_WEST,
 CD_NORTH_EAST,
 CD_NORTH_WEST,
 CD_SOUTH_EAST,
 CD_SOUTH_WEST,
 CD_CENTER,
 CD_BASE_LEFT,
 CD_BASE_CENTER,
 CD_BASE_RIGHT
}

enum {                          /* style */
 CD_PLAIN  = 0,
 CD_BOLD   = 1,
 CD_ITALIC = 2,
 CD_UNDERLINE = 4,
 CD_STRIKEOUT = 8
}

enum CD_BOLD_ITALIC = (CD_BOLD|CD_ITALIC);  /* compatibility name */

enum {                          /* some font sizes */
 CD_SMALL    =  8,
 CD_STANDARD = 12,
 CD_LARGE    = 18
}

/* Context Capabilities */
enum CD_CAP_NONE             = 0x0000_0000;
enum CD_CAP_FLUSH            = 0x0000_0001;
enum CD_CAP_CLEAR            = 0x0000_0002;
enum CD_CAP_PLAY             = 0x0000_0004;
enum CD_CAP_YAXIS            = 0x0000_0008;
enum CD_CAP_CLIPAREA         = 0x0000_0010;
enum CD_CAP_CLIPPOLY         = 0x0000_0020;
enum CD_CAP_REGION           = 0x0000_0040;
enum CD_CAP_RECT             = 0x0000_0080;
enum CD_CAP_CHORD            = 0x0000_0100;
enum CD_CAP_IMAGERGB         = 0x0000_0200;
enum CD_CAP_IMAGERGBA        = 0x0000_0400;
enum CD_CAP_IMAGEMAP         = 0x0000_0800;
enum CD_CAP_GETIMAGERGB      = 0x0000_1000;
enum CD_CAP_IMAGESRV         = 0x0000_2000;
enum CD_CAP_BACKGROUND       = 0x0000_4000;
enum CD_CAP_BACKOPACITY      = 0x0000_8000;
enum CD_CAP_WRITEMODE        = 0x0001_0000;
enum CD_CAP_LINESTYLE        = 0x0002_0000;
enum CD_CAP_LINEWITH         = 0x0004_0000;
enum CD_CAP_FPRIMTIVES       = 0x0008_0000;
enum CD_CAP_HATCH            = 0x0010_0000;
enum CD_CAP_STIPPLE          = 0x0020_0000;
enum CD_CAP_PATTERN          = 0x0040_0000;
enum CD_CAP_FONT             = 0x0080_0000;
enum CD_CAP_FONTDIM          = 0x0100_0000;
enum CD_CAP_TEXTSIZE         = 0x0200_0000;
enum CD_CAP_TEXTORIENTATION  = 0x0400_0000;
enum CD_CAP_PALETTE          = 0x0800_0000;
enum CD_CAP_LINECAP          = 0x1000_0000;
enum CD_CAP_LINEJOIN         = 0x2000_0000;
enum CD_CAP_PATH             = 0x4000_0000;
enum CD_CAP_BEZIER           = 0x8000_0000;
enum CD_CAP_ALL              = 0xFFFF_FFFF;

/* Context Types */
enum {
  CD_CTX_WINDOW,
  CD_CTX_DEVICE,
  CD_CTX_IMAGE,
  CD_CTX_FILE
}

/* cdPlay definitions */
enum CD_SIZECB = 0;        /* size callback */
//alias cdSizeCB = int function(cdCanvas* canvas, int w, int h, double w_mm, double h_mm) nothrow;
enum CD_ABORT = 1;
enum CD_CONTINUE = 0;

/* simulation flags */
enum CD_SIM_NONE         = 0x0000;
enum CD_SIM_LINE         = 0x0001;
enum CD_SIM_RECT         = 0x0002;
enum CD_SIM_BOX          = 0x0004;
enum CD_SIM_ARC          = 0x0008;
enum CD_SIM_SECTOR       = 0x0010;
enum CD_SIM_CHORD        = 0x0020;
enum CD_SIM_POLYLINE     = 0x0040;
enum CD_SIM_POLYGON      = 0x0080;
enum CD_SIM_TEXT         = 0x0100;
enum CD_SIM_ALL          = 0xFFFF;

enum CD_SIM_LINES = (CD_SIM_LINE | CD_SIM_RECT | CD_SIM_ARC | CD_SIM_POLYLINE);
enum CD_SIM_FILLS = (CD_SIM_BOX | CD_SIM_SECTOR | CD_SIM_CHORD | CD_SIM_POLYGON);

/* some predefined colors for convenience */
enum  CD_RED           = 0xFF_00_00L;   /* 255,  0,  0 */
enum  CD_DARK_RED      = 0x80_00_00L;   /* 128,  0,  0 */
enum  CD_GREEN         = 0x00_FF_00L;   /*   0,255,  0 */
enum  CD_DARK_GREEN    = 0x00_80_00L;   /*   0,128,  0 */
enum  CD_BLUE          = 0x00_00_FFL;   /*   0,  0,255 */
enum  CD_DARK_BLUE     = 0x00_00_80L;   /*   0,  0,128 */

enum  CD_YELLOW        = 0xFF_FF_00L;   /* 255,255,  0 */
enum  CD_DARK_YELLOW   = 0x80_80_00L;   /* 128,128,  0 */
enum  CD_MAGENTA       = 0xFF_00_FFL;   /* 255,  0,255 */
enum  CD_DARK_MAGENTA  = 0x80_00_80L;   /* 128,  0,128 */
enum  CD_CYAN          = 0x00_FF_FFL;   /*   0,255,255 */
enum  CD_DARK_CYAN     = 0x00_80_80L;   /*   0,128,128 */

enum  CD_WHITE         = 0xFF_FF_FFL;   /* 255,255,255 */
enum  CD_BLACK         = 0x00_00_00L;   /*   0,  0,  0 */

enum  CD_DARK_GRAY     = 0x80_80_80L;   /* 128,128,128 */
enum  CD_GRAY          = 0xC0_C0_C0L;   /* 192,192,192 */

/* some usefull conversion factors */
enum CD_MM2PT     = 2.834645669;   /* milimeters to points (pt = CD_MM2PT * mm) */
enum CD_RAD2DEG  = 57.295779513;   /* radians to degrees (deg = CD_RAD2DEG * rad) */
enum CD_DEG2RAD  = 0.01745329252;  /* degrees to radians (rad = CD_DEG2RAD * deg) */

/* paper sizes */
enum {
  CD_A0,
  CD_A1,
  CD_A2,
  CD_A3,
  CD_A4,
  CD_A5,
  CD_LETTER,
  CD_LEGAL
}



/******************************************************************************
Copyright (C) 1994-2016 Tecgraf/PUC-Rio.

Permission is hereby granted, free of charge, to any person obtaining
a copy of this software and associated documentation files (the
"Software"), to deal in the Software without restriction, including
without limitation the rights to use, copy, modify, merge, publish,
distribute, sublicense, and/or sell copies of the Software, and to
permit persons to whom the Software is furnished to do so, subject to
the following conditions:

The above copyright notice and this permission notice shall be
included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
******************************************************************************/
